# voice-ai-platform

./: .gitignore  LICENSE  README.md  test_ui.html
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: router.py  websocket.py
backend/app/audio/: codec.py  resampler.py
backend/app/db/: models.py  repository.py
backend/app/metrics/: collector.py  emf.py
backend/app/pipeline/: asr.py  llm.py  orchestrator.py  tts.py  vad.py
backend/app/session/: manager.py  models.py
backend/app/storage/: postgres_client.py  redis_client.py
backend/app/utils/: exceptions.py  logging.py  retry.py
backend/scripts/: download_tts_model.py  download_whisper.py  load_test.py  nvidia_chat.py
backend/tests/: conftest.py
backend/tests/unit/: test_retry.py  test_session.py  test_vad.py
infra/: docker-compose.yml
infra/nginx/: nginx.conf
mobile/src/components/: StatusBanner.tsx  TranscriptView.tsx  VoiceButton.tsx
mobile/src/hooks/: useVoiceSession.ts
mobile/src/screens/: HomeScreen.tsx
mobile/src/store/: sessionSlice.ts  store.ts
mobile/src/utils/: constants.ts  protocol.ts
